--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 * {
   box-sizing: border-box;
@@ -8,9 +9,17 @@ html,
 body {
   font-family: "Montserrat", sans-serif;
   background-color: #fafafa;
+}
+
+body {
   padding: 41px 48px;
 }
 
 h1 {
   font-size: 26px;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
 }
