--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,4 +22,11 @@ h1 {
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+button {
+  background-color: inherit;
+  border: none;
+  cursor: pointer;
 }
